libview: Add ev_job_links_get_model()

Introspection can't access job->model, because does not have
the information about when will be released.

Signed-off-by: Gonzalo Odiard <gonzalo@laptop.org>

https://bugzilla.gnome.org/show_bug.cgi?id=682882